[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Character/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/light_shape.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/animated/alien_animated/alien_animated-4.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/animated/alien_animated/alien_animated-11.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/animated/alien_animated/alien_animated-3.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/animated/alien_animated/alien_animated-5.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/animated/alien_animated/alien_animated-2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
strategy = 0

[node name="Sprite" parent="." index="0"]
frames = SubResource( 2 )
animation = "walk_down"

[node name="MoveTick" parent="." index="2"]
wait_time = 1.0

[node name="Halo" type="Light2D" parent="." index="3"]
position = Vector2( 83, 78 )
scale = Vector2( 0.324219, 0.314453 )
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 0.627451, 0.270588, 0.219608, 1 )
shadow_enabled = true

[node name="EnemyBlindZone" type="Area2D" parent="." index="4"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBlindZone" index="0"]
shape = SubResource( 1 )

[node name="PatrolMode" type="Timer" parent="." index="7"]
wait_time = 20.0

[node name="StartMoving" type="Timer" parent="." index="8"]
one_shot = true
autostart = true

[connection signal="area_entered" from="EnemyBlindZone" to="." method="_on_EnemyBlindZone_area_entered"]
[connection signal="area_exited" from="EnemyBlindZone" to="." method="_on_EnemyBlindZone_area_exited"]
[connection signal="timeout" from="PatrolMode" to="." method="_on_PatrolMode_timeout"]
[connection signal="timeout" from="StartMoving" to="." method="_on_StartMoving_timeout"]
